# edaitmo

./: README.md  pyproject.toml
edaitmo/: eda.ipynb
