[tool.poetry]
name = "edaitmo"
version = "0.1.0"
description = ""
authors = ["Aleksandr Klokov <klokov55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
ipykernel = "^6.30.1"
pyarrow = "^21.0.0"
pandarallel = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
